CB-24140 Create entitlement for secret encryption
* Introduce entitlement CDP_CB_SECRET_ENCRYPTION, disabled by default.
* MockUserManagementService.init(): Print granted entitlements upon bean
  creation.
* Testing: Adapted existing UT.